docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__SalesNodeMetric__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sfsp__SalesMetric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Metric</label>
        <referenceTo>sfsp__SalesMetric__c</referenceTo>
        <relationshipLabel>Sales Node Metrics</relationshipLabel>
        <relationshipName>SalesNodeMetrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Node</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>Sales Node Metrics</relationshipLabel>
        <relationshipName>SalesNodeMetrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>Sales Node Metrics</relationshipLabel>
        <relationshipName>SalesNodeMetrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__TargetOverrideAmount__c</fullName>
        <label>Override Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__TargetOverrideType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                    <default>true</default>
                    <label>Amount</label>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__Target_Month10__c</fullName>
        <label>Target Month 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__Target_Month11__c</fullName>
        <label>Target Month 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__Target_Month12__c</fullName>
        <label>Target Month 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Node Metric</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Node Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>